internationalize registration page

--- a/registration/templates/registration_complete.html
+++ b/registration/templates/registration_complete.html
@@ -3,7 +3,7 @@
 {% block title %} Activation email sent{% endblock %}
 {% block content %}
 <div class="col-md-12">
-   <h2>Eine Aktivierungsmail wurde Dir soeben zugesendet.</h2>
-    <h3>Bitte bestätige die Anmeldung mit dem Link in der Email. Bitte schaue im Spam-Ordner nach, solltest Du nach 10 Minuten noch keine Mail bekommen haben.</h3>
+   <h2>{% trans "Eine Aktivierungsmail wurde Dir soeben zugesendet." %}</h2>
+    <h3>{% trans "Bitte bestätige die Anmeldung mit dem Link in der Email. Bitte schaue im Spam-Ordner nach, solltest Du nach 10 Minuten noch keine Mail bekommen haben." %}</h3>
 </div>
 {% endblock %}
