--- a/registration/templates/registration_form.html
+++ b/registration/templates/registration_form.html
@@ -1,37 +1,37 @@
 {% extends "registration_base.html" %}
 {% load i18n %}
-{% block title %}Register for an account{% endblock %}
+{% block title %}{% trans "Register for an account" %}{% endblock %}
 {% block content %}
 <div class="col-md-1"></div>
 <div class="col-md-3 form-container ">
     <h1 class="align-right">volunteer-planner.org</h1>
-    <h2 class="align-right">Registrierung</h2>
+    <h2 class="align-right">{% trans "Registrierung" %}</h2>
 </div>
 <div class="col-md-3 border-left form-container">
     {{ form.non_field_errors }}
 
     <form method='post' action=''>{% csrf_token %}
         <div class="form-group ">
-            <label for="Email">Emailadresse</label>
+            <label for="Email">{% trans "Emailadresse" %}</label>
             {% for email_error in form.email.errors %}
                 <div class="alert alert-danger" role="alert">{{ email_error }}</div>
             {% endfor %}
             <input type="email" class="form-control" id="Email" placeholder="Email" name="email">
         </div>
         <div class="form-group {%  if form.username.errors %} has-error{% endif %}">
-            <label {%  if form.username.errors %} style="color:red"{% endif %} for="Username">Benutzername {%  if form.username.errors %} ist bereits vorhanden! Bitte wähle einen anderen Namen{% endif %}</label>
+            <label {%  if form.username.errors %} style="color:red"{% endif %} for="Username">{% trans "Benutzername" %} {%  if form.username.errors %} ist bereits vorhanden! Bitte wähle einen anderen Namen{% endif %}</label>
             <input class="form-control " id="Username" placeholder="Benutzername" name="username">
-        <p class="help-block">Bitte keine Leerzeichen, Sonderzeichen und Umlaute verwenden.</p>
+        <p class="help-block">{% trans "Bitte keine Leerzeichen, Sonderzeichen und Umlaute verwenden." %}</p>
         </div>
           <div class="form-group">
-            <label for="Password1">Password</label>
+            <label for="Password1">{% trans "Password" %}</label>
             <input type="password" class="form-control" id="Password1" placeholder="Password" name="password1">
           </div>
           <div class="form-group">
-            <label for="Password2">Password wiederholen</label>
+            <label for="Password2">{% trans "Password" %}</label>
             <input type="password" class="form-control" id="Password1" placeholder="Passwort wiederholen" name="password2">
           </div>
-        <button type="submit" class="btn btn-primary align-left">registrieren</button>
+        <button type="submit" class="btn btn-primary align-left">{% trans "registrieren" %}</button>
     </form>
 </div>
 
