--- a/registration/templates/registration_form.html
+++ b/registration/templates/registration_form.html
@@ -12,14 +12,14 @@
 
     <form method='post' action=''>{% csrf_token %}
         <div class="form-group ">
-            <label for="Email">{% trans "Emailadresse" %}</label>
+            <label for="Email">{% trans "E-mail address" %}</label>
             {% for email_error in form.email.errors %}
                 <div class="alert alert-danger" role="alert">{{ email_error }}</div>
             {% endfor %}
             <input type="email" class="form-control" id="Email" placeholder="Email" name="email">
         </div>
         <div class="form-group {%  if form.username.errors %} has-error{% endif %}">
-            <label {%  if form.username.errors %} style="color:red"{% endif %} for="Username">{% trans "Benutzername" %} {%  if form.username.errors %} ist bereits vorhanden! Bitte wähle einen anderen Namen{% endif %}</label>
+            <label {%  if form.username.errors %} style="color:red"{% endif %} for="Username">{% trans "Username" %} {%  if form.username.errors %} ist bereits vorhanden! Bitte wähle einen anderen Namen{% endif %}</label>
             <input class="form-control " id="Username" placeholder="Benutzername" name="username">
         <p class="help-block">{% trans "Bitte keine Leerzeichen, Sonderzeichen und Umlaute verwenden." %}</p>
         </div>
